--- a/Frontend/predict.html
+++ b/Frontend/predict.html
@@ -166,7 +166,7 @@
             resultDiv.style.display = "none";
             tableContainer.innerHTML = ""; // Clear previous table
 
-            const response = await fetch('http://127.0.0.1:5000/predict', {
+            const response = await fetch('https://stock-market-analysis-and-forecasti.vercel.app/predict', {
                 method: 'POST',
                 body: formData
             });
