add a loding effect

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
                 <li><a href="#demo">Demo</a></li>
-                <li><a href="predict.html" class="nav-cta">Analysis Tool</a></li>
+                <li><a href="https://drive.google.com/file/d/1nH_4ZeUZyWyVN3B_h8rxDkhikZIdBRtD/view?usp=drive_link" class="nav-cta">Demo CSV File</a></li>
             </ul>
             <div class="hamburger">
                 <i class="fas fa-bars"></i>
