--- a/Frontend/predict.html
+++ b/Frontend/predict.html
@@ -153,6 +153,17 @@
             <input type="file" name="file" required>
             <button type="submit">Predict</button>
         </form>
+        <div id="loading" style="display:none; text-align:center; margin-top:20px;">
+            <div class="spinner" style="margin-bottom:10px;">
+                <svg width="40" height="40" viewBox="0 0 40 40">
+                    <circle cx="20" cy="20" r="16" stroke="#4ecdc4" stroke-width="4" fill="none" stroke-linecap="round">
+                        <animate attributeName="stroke-dasharray" values="1,150;90,150;90,150" dur="1.5s" repeatCount="indefinite"/>
+                        <animate attributeName="stroke-dashoffset" values="0;-35;-124" dur="1.5s" repeatCount="indefinite"/>
+                    </circle>
+                </svg>
+            </div>
+            <span style="color:#4ecdc4;font-weight:bold;">Data are processing, please wait...</span>
+        </div>
         <div id="result" style="display:none;"></div>
         <div id="tableContainer"></div>
     </div>
@@ -163,14 +174,29 @@
             formData.delete('stock_symbol');
             const resultDiv = document.getElementById('result');
             const tableContainer = document.getElementById('tableContainer');
+            const loadingDiv = document.getElementById('loading');
             resultDiv.style.display = "none";
             tableContainer.innerHTML = ""; // Clear previous table
+
+            // Show loading spinner/message
+            loadingDiv.style.display = "block";
+
+            // Wait for 15 seconds before sending the request (simulate processing)
+            await new Promise(resolve => setTimeout(resolve, 5000));
 
             const response = await fetch('https://stock-market-analysis-and-forecasti.vercel.app/predict', {
                 method: 'POST',
                 body: formData
             });
+
+            //  const response = await fetch('http://127.0.0.1:5000/predict', {
+            //     method: 'POST',
+            //     body: formData
+            // });
             const data = await response.json();
+
+            // Hide loading spinner/message
+            loadingDiv.style.display = "none";
 
             if (data.error) {
                 resultDiv.innerHTML = `<p style="color:#ff5252;">${data.error}</p>`;
